<resources>
    <string name="app_name">Story Application</string>
    <string name="galery">Galery</string>
    <string name="upload_story">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload_success">Story Uploaded Successfully</string>
    <string name="detail_story">Detail Story</string>
    <string name="name">Name</string>
    <string name="permission_forbidden">Not getting permission</string>
    <string name="text_uploaded">Uploaded on</string>
    <string name="logout_button">Button Logout</string>
    <string name="add_new_story">Add New Story</string>
    <string name="image">Image story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_have_signup">You have successfully signed up</string>
    <string name="loading">Wait…</string>
    <string name="check_connection">Check Your Internet Connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="second">second ago</string>
    <string name="minutes">minutes ago</string>
    <string name="hours">hours ago</string>
    <string name="days">days ago</string>
    <string name="login">Login</string>
    <string name="hi_welcome_back">Hi! Welcome Back!</string>
    <string name="try_again">Try Again</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="invalid_email">Email format is invalid</string>
    <string name="password_less_8">Password less then 8</string>
    <string name="required_field">Please fill out this field</string>
    <string name="welcome">Hi! Welcome Back!</string>
    <string name="please_login_first">Please login first!</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="maps_title">Maps Activity</string>
    <string name="create_your_account_here">Create Your Account Here</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="create_account">Create Account</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="share">Share</string>
</resources>